--- a/PersonalAssistant/CMakeLists.txt
+++ b/PersonalAssistant/CMakeLists.txt
@@ -2,19 +2,21 @@
 cmake_minimum_required (VERSION 2.8)
 
 #project name
-PROJECT(Personal Assistant)
+PROJECT(PersonalAssistant)
 
 #head file path
 INCLUDE_DIRECTORIES(include)
 
 #source file path
-AUX_SOURCE_DIRECTORIES(src DIR_SRCS)
+AUX_SOURCE_DIRECTORY(src DIR_SRCS)
 
 #指定源文件
 #用变量的方式默认路径下的所有源文件
-add_excutable(${DIR_SRCS})
+add_executable(PersonalAssistant ${DIR_SRCS})
 
 #set extern libraries
+option(wxWidgets3.0 "use wxWidgets lib")
+
 if (wxWidgets3.0)
 	message("wxWidgets3.0 is defined")
 endif(wxWidgets3.0)
