--- a/CodeNote/CMakeLists.txt
+++ b/CodeNote/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required (VERSION 2.8)
 
 #project name
-PROJECT(PersonalAssistant)
+PROJECT(CodeNote)
 
 #head file path
 INCLUDE_DIRECTORIES(include)
@@ -12,7 +12,7 @@ AUX_SOURCE_DIRECTORY(src DIR_SRCS)
 
 #指定源文件
 #用变量的方式默认路径下的所有源文件
-#add_executable(PersonalAssistant ${DIR_SRCS})
+#add_executable(CodeNote ${DIR_SRCS})
 
 #set extern libraries
 option(wxWidgets3.0 "use wxWidgets lib")
@@ -58,8 +58,6 @@ if (wxWidgets3.0)
 		rpcrt4.lib  
 		wsock32.lib  
 		odbc32.lib)
-	add_executable(PersonalAssistant ${DIR_SRCS})
-	TARGET_LINK_LIBRARIES(PersonalAssistant ${PROJECT_WX_LIBS})
+	add_executable(CodeNote ${DIR_SRCS})
+	TARGET_LINK_LIBRARIES(CodeNote ${PROJECT_WX_LIBS})
 endif(wxWidgets3.0)
-
-add_subdirectory(src/CodeNote)
